--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,7 @@
 <resources>
 
     <string name="app_name">ForkCaster</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="menu_settings">Configuração</string>
+    <string name="title_activity_main">ForkCaster</string>
 
 </resources>
